# Convection_Diffusion_Simulation

./: Makefile  README.md
LabView/: Convection_diffusion.lvlps  Convection_diffusion.lvproj  main.vi
LabView/elements/: combo_box.ctl
LabView/lib/headers/: libConvectionDiffusionHeader.h
LabView/lib/libConvectionDiffusionWrapper/: Report.html  dir.mnu
LabView/lib/libConvectionDiffusionWrapper/VIs/: clear Log.vi  dir.mnu  display Log.vi  get VTK Data.vi  get VTK max X Value.vi  get VTK max Y Value.vi  get VTK min X Value.vi  get VTK min Y Value.vi  get VTK num Cells.vi  get VTK num Points.vi  get VTK num X Coords.vi  get VTK num Y Coords.vi  get VTK x Offset.vi  get VTK y Offset.vi  save VTK File.vi  wrapper Init.vi
LabView/subVI/: open_matrix.vi  plot_results.vi
labview_wrapper/: README.md
labview_wrapper/LabView/: main.vi
labview_wrapper/LabView/lib/libConvectionDiffusionWrapper/: libConvectionDiffusionWrapper.lvlib
labview_wrapper/LabView/lib/libConvectionDiffusionWrapper/VIs/: clear Log.vi  get VTK min Y Value.vi  get VTK num Points.vi  get VTK x Offset.vi  wrapper Init.vi
src/: convection_diffusion_wrapper.cpp  main.cpp  read_vtk.h  run_log.h
wrapper/: CMakeLists.txt  convection_diffusion_wrapper.cpp  readme.txt  tmpVTU_14092020185326.vtu
